nav header color; fix alignment of item view bookmark checkbox and label

--- a/app/assets/stylesheets/cornell/_components.css.scss
+++ b/app/assets/stylesheets/cornell/_components.css.scss
@@ -107,11 +107,13 @@
 	}
 
 }
-.nav-header {
-	font-size: 14px;
-	text-transform: uppercase;
-	a {
-		color: $dark-gray;
+.nuremberg {
+	.nav-header {
+		font-size: 14px;
+		text-transform: uppercase;
+		a {
+			color: $dark-gray;
+		}
 	}
 }
 
